--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -120,7 +120,7 @@
 
 <div id="term"></div>
 
-<ol id="FileManager"></ol>
+<ol id="FileManager" class="sortable"></ol>
 
 <div style="width:100%;max-height:100px;min-height:100px;height:100px; max-width:100%; background-color:black;">
     <div id="error"></div>
