--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -77,11 +77,12 @@
     </form>
 </div>
        
-<button id="add_tab">Add Tab</button>
+<button id="add_tab"><img src="~/pics/plus.png" style="width:30px; height:30px;"  /></button>
 
 <div id="tabs">
     <ul id="sortable">
         <li><a href="#tabs-1">Tab 1</a> <span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
+     
     </ul>
 
     </div>
@@ -99,21 +100,20 @@
     <div id="error"></div>
 </div>
 
-
-    
-    
+  
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script src="~/ace/ace.js"></script>
 <script src="~/ace/ext-language_tools.js"></script>
-<script src="~/Scripts/FileManagement.js"></script>
+
 
 <script src="~/myjs/terminal.js"></script>
-<script src="~/myjs/header.js"></script>
+<script src="~/myjs/header.js"></script>re
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="~/myjs/tabs.js"></script>
+<script src="~/Scripts/FileManagement.js"></script>
 
 <script>
     var editor = ace.edit("editor");
@@ -129,13 +129,7 @@
 </script>
 
 <script src="~/Scripts/autoSave.js"></script>
-    
-
 
 <script src="~/myjs/loadTheTerminal.js"></script>
-
-
-
-
 
 <script src="~/Scripts/VariableChecks.js"></script>
