fixed minor bugs

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
     </form>
 </div>
        
-<button id="add_tab">Add Tab</button>
+<button id="add_tab"><img src="~/pics/plus.png" style="width:35px; height:35px;"/></button>
 
 <div id="tabs">
     <ul id="sortable">
@@ -132,7 +132,7 @@
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script src="~/ace/ace.js"></script>
 <script src="~/ace/ext-language_tools.js"></script>
-<script src="~/Scripts/FileManagement.js"></script>
+
 
 <script src="~/myjs/terminal.js"></script>
 <script src="~/myjs/header.js"></script>
@@ -141,6 +141,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="~/myjs/tabs.js"></script>
+<script src="~/Scripts/FileManagement.js"></script>
 
 <script>
     var editor = ace.edit("editor");
