linked tabs to fileobjects, right-click menu buttons need create/delete functions

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -79,7 +79,15 @@
     </span>
 </p>
 
+<div class='fileMenu'>
+    
+    <button>Create New File</button>
 
+    <button>Delete File</button>
+    
+    
+    
+    </div>
 
 <div id="dialog" title="Tab data">
     <form>
@@ -90,12 +98,23 @@
         </fieldset>
     </form>
 </div>
+
+<div id="dialog" title="Tab data">
+    <form>
+        <fieldset class="ui-helper-reset">
+            <label for="tab_title">Filetype</label>
+            <input type="text" name="tab_title" id="tab_title" placeholder="javascript,c# or html" class="ui-widget-content ui-corner-all">
+
+        </fieldset>
+    </form>
+</div>
+
        
 <button id="add_tab"><img src="~/pics/plus.png" style="width:35px; height:35px;"/></button>
 
 <div id="tabs">
     <ul id="sortable">
-        <li><a href="#tabs-1">Tab 1</a> <span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
+        
     </ul>
 
     </div>
