changed a few rows only.

--- a/WebApplication1/WebApplication1/Views/Home/About.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Editor prototype";
+    ViewBag.Title = "Apirix editor prototype";
 }
 
 <!DOCTYPE html>
@@ -9,13 +9,13 @@
 <head>
     <!-- Viewsport, desctription, ignore default mobile stylings, author -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="Code editor">
+    <meta name="description" content="Code editor by Apirix">
     <meta name="format-detection" content="telephone=no" />
     <meta name="author" content="The Fantastic 4 Kalmar style">
     <meta charset="UTF-8">
     <!-- Title of the webbsite -->
     <title>Apirix editor prototype</title>
-    <!-- Cascading Style sheets -->
+    <!-- Cascading Style Sheets -->
     <link rel="stylesheet" href="../../Content/bootstrap.css" />
     <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
     <link rel="stylesheet" href="../../Content/Site.css" />
@@ -65,7 +65,7 @@
             <div id="myDropdownTheme" class="dropdown-content">
                 <p class="p-aligncenter" id="monokai"><span title="A dark theme">monokai</span></p>
                 <p class="p-aligncenter" id="iplastic"><span title="A gray-white theme">iplastic</span></p>
-                <p class="p-aligncenter" id="cobalt"><span title="A dark-blue color">cobalt</span></p>
+                <p class="p-aligncenter" id="cobalt"><span title="A dark-blue theme">cobalt</span></p>
                 <p class="p-aligncenter" id="tomorrow"><span title="A white theme">tomorrow</span></p>
             </div>
         </div>
@@ -88,9 +88,9 @@
             <div class="anitfloat" id="testfloat">
                 <p class="spanCommandP"><span title="Transforms the editor into full screen size" id="full1" class="spanpointer">Fullscreen</span></p>
                 <p class="spanCommandP"><span title="Revert the full screen editor into normal size" id="rev1" class="spanpointer">Window Mode</span></p>
-                <p class="spanCommandP"><span title="Editor resolution w600px h450px" id="res1" class="spanpointer">600 x 450 Resolution</span></p>
-                <p class="spanCommandP"><span title="Editor resolution w900px h600px" id="res2" class="spanpointer">900 x 600 Resolution</span></p>
-                <p class="spanCommandP"><span title="Editor resolution w1200px h800px" id="res3" class="spanpointer">1200 x 800 Resolution</span></p>
+                <p class="spanCommandP"><span title="Editor resolution w600px - h450px" id="res1" class="spanpointer">600 x 450 Resolution</span></p>
+                <p class="spanCommandP"><span title="Editor resolution w900px - h600px" id="res2" class="spanpointer">900 x 600 Resolution</span></p>
+                <p class="spanCommandP"><span title="Editor resolution w1200px - h800px" id="res3" class="spanpointer">1200 x 800 Resolution</span></p>
             </div>
             <div class="anitfloat">
                 <div class="clickmetoopenLang" id="thirdopen"></div>
