--- a/WebApplication1/WebApplication1/Content/FileManagerDesign.css
+++ b/WebApplication1/WebApplication1/Content/FileManagerDesign.css
@@ -127,3 +127,75 @@ ol.FileManager
     opacity:1;
 
 }
+/*Css Alex*/
+
+#editor-box{
+   
+    float:left;
+    width:100%;
+    height:600px;
+}
+#editor{
+    
+    display: inline-block;
+    width:80%;
+    height:90%;
+    padding-top:20px;
+}
+#FileManager{
+      
+    
+    display: inline-block;
+
+    
+}
+
+#ram{
+        -webkit-box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
+    float:left;
+    /*border-radius: 4px;*/
+    
+     
+    border:solid 1px;
+    border-color:black;
+    height: 100%;
+    width:150px;
+     overflow-x:scroll;
+     overflow-y:auto;
+    background-color:#9B9B9B;
+    /*box-shadow: inset 0 0 1em black, 0 0 1em black;*/
+     
+}
+#ram a{
+    margin-top:20px;
+    margin-right:10px;
+}
+#ram li{
+    margin-top:10px;
+    margin-right:10px;
+   
+}
+.terminal{
+      /*box-shadow: inset 0 0 1em black, 0 0 1em black;*/
+}
+
+/*style for scrollbar*/
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    /*border-radius: 10px;*/
+}
+ 
+::-webkit-scrollbar-thumb {
+    /*border-radius: 10px;*/
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+
+/*END style for scrollbar*/
+
