--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -88,7 +88,7 @@ p {
 #de {
     text-align:center;
 }
-#editor {
+/*#editor {
     margin: 0;
     width:900px;
     height:600px;
@@ -101,7 +101,7 @@ p {
     margin-right:auto;
     border:1px solid gray;
     box-shadow:1px 1px 1px;
-}
+}*/
 #DocumentHeader {
     text-align:center;
 }
@@ -262,6 +262,7 @@ p {
     }
 
     #dialog label {
+       
         margin-top: 0.5em;
     }
 
@@ -270,13 +271,20 @@ p {
     }
 
     #tabs {
-        margin-top: 1em;
+        width:79.50%;
+      
+        /*position: absolute;*/
+        display: inline-block;
+        padding-left:0;
+-webkit-box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
     }
 
         #tabs li .ui-icon-close {
-            float: left;
-            margin: 0.1em 0.2em 0 0;
-            cursor: pointer;
+        float: left;
+        margin: 0.1em 0.2em 0 0;
+        cursor: pointer;
         }
 
     #add_tab {
@@ -284,18 +292,27 @@ p {
     }
 
     #sortable {
+        
         list-style-type: none;
-        margin: 0;
-        padding: 0;
-        width: 100%;
+    
+        /*box-shadow: inset 0 0 1em black, 0 0 1em black;*/
+        border-right-color:silver;
+        border-top-color:silver;
+        border-bottom-color:silver;
+  
+        width:100%;
+  
+      
+
     }
 
         #sortable li {
             margin: 0 3px 3px 3px;
             padding: 0.4em;
             padding-left: 0em;
-            font-size: 1.4em;
-            height: 18px;
+            font-size: 1.0em;
+            height: 15px;
+           
         }
 
             #sortable li span {
@@ -309,22 +326,83 @@ p {
         padding: 0.0em 1em;
         text-decoration: none;
         margin: -0.1em 0em;
+       
     }
 
     .ui-tabs{
             padding:  0 0.1em;
+            
     }
 
-    .ui-widget-content {
-        border:none;
-    }
+   
 
     /*Tabs CSS END*/
 
 
 
     .ui-tabs .ui-tabs-nav .ui-tabs-anchor {
-    float: left;
+  
     padding: 0em 1em; 
     text-decoration: none;
+    
 }
+    .ui-tabs {
+        width:60%;    
+     
+    
+    /* padding: .2em; */
+}
+    .ui-widget-header {
+    border: 1px solid #aaaaaa;
+    border-color:darkgray;
+    background: #9B9B9B 50% 50% repeat-x;
+    color: #222222;
+    font-weight: bold;
+}
+  #preview_button {
+	-moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	-webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	box-shadow:inset 0px 1px 3px 0px #91b8b3;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #768d87), color-stop(1, #6c7c7c));
+	background:-moz-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:-o-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:-ms-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
+	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#768d87', endColorstr='#6c7c7c',GradientType=0);
+	background-color:#768d87;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	border:1px solid #566963;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:11px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #2b665e;
+    
+}
+#preview_button  {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
+	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:-o-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:-ms-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
+	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#768d87',GradientType=0);
+	background-color:#6c7c7c;
+}
+#preview_button {
+	position:relative;
+	top:1px;
+}
+
+.ui-corner-all {
+    border-radius: 0px;
+}
+/*Button preview*/
+
