--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿
 @{
     ViewBag.Title = "Home Page";
-       
+
 }
 <link href="~/Content/FileManagerDesign.css" rel="stylesheet" />
 
 
 
-    <style>
-        #textarea2 {
-            width: 1500px;
-            height: 150px;
-        }
-    </style>
+<style>
+    #textarea2 {
+        width: 1500px;
+        height: 150px;
+    }
+</style>
 
 
 
@@ -62,7 +62,7 @@
         </div>
     </div>
 </div>
-   
+
 <h1 id="DocumentHeader">Apirix IDE Prototype</h1>
 <p>
     <meta charset="utf-8" />
@@ -75,8 +75,8 @@
     <span>
 
         <!--<span id="img-unChecked">...</span>-->
-            <img id="img-check" src="~/img/good_or_tick.png" width="20" height="20" hidden="hidden" />
-        </span>
+        <img id="img-check" src="~/img/good_or_tick.png" width="20" height="20" hidden="hidden" />
+    </span>
 </p>
 
 
@@ -90,45 +90,53 @@
         </fieldset>
     </form>
 </div>
-       
+
 <button id="add_tab">Add Tab</button>
 
-<div id="tabs">
-    <ul id="sortable">
-        <li><a href="#tabs-1">Tab 1</a> <span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
-    </ul>
 
+
+
+
+
+@using (Html.BeginForm())
+{
+
+    // <input type="text" id="testData" />
+    <input style="display:none" type="text" id="testData" name="reportName" />
+    <input type="submit" value="testData" id="preButton" />
+}
+<div id="editor-box">
+
+
+    <div id="ram">
+        <ol id="FileManager"></ol>
     </div>
 
+    <div id="tabs">
+        <ul id="sortable">
+            <li><a href="#tabs-1">Tab 1</a> <span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
+        </ul>
 
-
-    //view
-    @using (Html.BeginForm())
-    {
-
-        //  <input type="text" id="testData" />
-        <input style="display:none" type="text" id="testData" name="reportName" />
-        <input type="submit" />
-    }
-
-<pre id="editor" style="height:300px">
+    </div>
+    <pre id="editor">
 </pre>
-  
 
 
 
 
+
+
+ 
+</div>
 <div id="term"></div>
 
-<ol id="FileManager"></ol>
-
-<div style="width:100%;max-height:100px;min-height:100px;height:100px; max-width:100%; background-color:black;">
-    <div id="error"></div>
-</div>
+@*<div style="width:100%;max-height:100px;min-height:100px;height:100px; max-width:100%; background-color:black;">
+        <div id="error"></div>
+    </div>*@
 
 
-    
-    
+
+
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script src="~/ace/ace.js"></script>
 <script src="~/ace/ext-language_tools.js"></script>
@@ -156,7 +164,7 @@
 </script>
 
 <script src="~/Scripts/autoSave.js"></script>
-    
+
 
 
 <script src="~/myjs/loadTheTerminal.js"></script>
