--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -103,7 +103,8 @@
 
     // <input type="text" id="testData" />
         <input style="display:none" type="text" id="testData" name="reportName" />
-    <input type="submit" value="testData" id="preButton" />
+    <input type="submit" value="testData" id="preview_button" />
+  
     }
 <div id="editor-box">
 
