--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -359,50 +359,51 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
     color: #222222;
     font-weight: bold;
 }
-  #preview_button {
-	-moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
-	-webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
-	box-shadow:inset 0px 1px 3px 0px #91b8b3;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #768d87), color-stop(1, #6c7c7c));
-	background:-moz-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:-o-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:-ms-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#768d87', endColorstr='#6c7c7c',GradientType=0);
-	background-color:#768d87;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	border:1px solid #566963;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:11px 23px;
-	text-decoration:none;
-	text-shadow:0px -1px 0px #2b665e;
-    
-}
-#preview_button  {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
-	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:-o-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:-ms-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#768d87',GradientType=0);
-	background-color:#6c7c7c;
-}
-#preview_button {
-	position:relative;
-	top:1px;
-}
+  
 
 .ui-corner-all {
     border-radius: 0px;
 }
 /*Button preview*/
 
+
+#preview_button {
+    margin-right:100px;
+    float:right;
+	-moz-box-shadow:inset 0px 1px 0px 0px #8ab876;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #8ab876;
+	box-shadow:inset 0px 1px 0px 0px #8ab876;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5bcc26), color-stop(1, #598f3e));
+	background:-moz-linear-gradient(top, #5bcc26 5%, #598f3e 100%);
+	background:-webkit-linear-gradient(top, #5bcc26 5%, #598f3e 100%);
+	background:-o-linear-gradient(top, #5bcc26 5%, #598f3e 100%);
+	background:-ms-linear-gradient(top, #5bcc26 5%, #598f3e 100%);
+	background:linear-gradient(to bottom, #5bcc26 5%, #598f3e 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5bcc26', endColorstr='#598f3e',GradientType=0);
+	background-color:#5bcc26;
+	border:1px solid #3b6e22;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	font-weight:bold;
+	padding:6px 12px;
+	text-decoration:none;
+}
+
+#preview_button:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #598f3e), color-stop(1, #5bcc26));
+	background:-moz-linear-gradient(top, #598f3e 5%, #5bcc26 100%);
+	background:-webkit-linear-gradient(top, #598f3e 5%, #5bcc26 100%);
+	background:-o-linear-gradient(top, #598f3e 5%, #5bcc26 100%);
+	background:-ms-linear-gradient(top, #598f3e 5%, #5bcc26 100%);
+	background:linear-gradient(to bottom, #598f3e 5%, #5bcc26 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#598f3e', endColorstr='#5bcc26',GradientType=0);
+	background-color:#598f3e;
+}
+
+#preview_button:active {
+	position:relative;
+	top:1px;
+}
