pushing for updating purposes

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -81,9 +81,9 @@
 
 <div class='fileMenu'>
     
-    <button>Create New File</button>
+    <button id="CreateFileButton">Create New File</button>
 
-    <button>Delete File</button>
+    <button id="DeleteFileButton">Delete File</button>
     
     
     
