preparing to update branch

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -109,9 +109,9 @@
             <label>Syntax</label>
             <select id="createTabDropdown">
                 <option value="HTML">HTML</option>e
-                <option value="CSS">CSS</option>
+                <option value="css">CSS</option>
                 <option value="C#">C#</option>
-                <option value="jJAVASCRIPT">JAVASCRIPT</option>
+                <option value="JAVASCRIPT">JAVASCRIPT</option>
             </select>
             
         </fieldset>
