--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -1,36 +1,27 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Home Page";
-       
 }
-<link href="~/Content/FileManagerDesign.css" rel="stylesheet" />
-
-
-
-    <style>
-        #textarea2 {
-            width: 1500px;
-            height: 150px;
-        }
-    </style>
-
-
-
-
-<link href="~/Content/styleIndex.css" rel="stylesheet" />
 
 <div id="consoleError"></div>
 
-
 <head>
+    <!-- Viewsport, desctription, ignore default mobile stylings, author -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="Code editor by Apirix">
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="author" content="The Fantastic 4 Kalmar style">
     <meta charset="UTF-8">
-    <title>ACE Autocompletion demo</title>
+    <!-- Title of the webbsite -->
+    <title>Apirix editor prototype</title>
+    <!-- Cascading Style Sheets -->
+    <link href="~/Content/FileManagerDesign.css" rel="stylesheet" />
+    <link href="~/Content/styleIndex.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="../../Content/Site.css" />
     <link rel="stylesheet" href="../../Content/bootstrap.css" />
     <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
     <link href="~/mycss/StyleSheet1.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="../../Content/Task67Styling.css" />
 </head>
 
 <div id="fullwidth1pxheight">
