New file working

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -108,10 +108,10 @@
             
             <label>Syntax</label>
             <select id="createTabDropdown">
-                <option value="HTML">HTML</option>e
+                <option value="html">HTML</option>
                 <option value="css">CSS</option>
-                <option value="C#">C#</option>
-                <option value="JAVASCRIPT">JAVASCRIPT</option>
+                <option value="csharp">C#</option>
+                <option value="javascript">JAVASCRIPT</option>
             </select>
 
         </fieldset>
