--- a/WebApplication1/WebApplication1/Content/FileManagerDesign.css
+++ b/WebApplication1/WebApplication1/Content/FileManagerDesign.css
@@ -135,10 +135,12 @@ ol.FileManager
 /*Css Alex*/
 
 #editor-box{
-   
-    float:left;
+    position:absolute;
+ overflow:hidden;
+   margin-top:50px;
     width:100%;
-    height:600px;
+    height:auto;
+     min-height: 100% !important;
 }
 #editor{
     
@@ -183,6 +185,10 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
    
 }
 .terminal{
+     position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px; 
       /*box-shadow: inset 0 0 1em black, 0 0 1em black;*/
 }
 
