--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -1,4 +1,8 @@
-﻿
+﻿#textarea2 {
+            width: 1500px;
+            height: 150px;
+        }
+
 /*Tabs CSS BEGINING*/
 
 #dialog label, #dialog input {
