--- a/WebApplication1/WebApplication1/Content/style67.css
+++ b/WebApplication1/WebApplication1/Content/style67.css
@@ -153,18 +153,8 @@ p {
     text-align:center;
 }
 #editor {
-    margin: 0;
-    width:900px;
-    height:600px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index:50;
-    margin-left:auto;
-    margin-right:auto;
-    border:1px solid gray;
-    box-shadow:1px 1px 1px;
+    margin: 0px;
+    padding:0px;
 }
 #DocumentHeader {
     text-align:center;
