--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -281,8 +281,9 @@
     editor.setOptions({
         enableBasicAutocompletion: true,
         enableSnippets: true,
-        enableLiveAutocompletion: true
-
+        enableLiveAutocompletion: true,
+        fontFamily: "Consolas",
+        fontSize: "12pt"
     });
 </script>
 
