--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -35,7 +35,7 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
         cursor: pointer;
     }
 
-    #sortable {
+    /*#sortable {
         
         list-style-type: none;
     
@@ -48,7 +48,7 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
   
       
 
-    }
+    }*/
 
         #sortable li {
             margin: 0 3px 3px 3px;
