--- a/WebApplication1/WebApplication1/Content/style67.css
+++ b/WebApplication1/WebApplication1/Content/style67.css
@@ -44,12 +44,14 @@ p {
     cursor: pointer;
     background-color:transparent;
     padding:5px;
-    font-size:17px;
+    font-size:medium;
+    font-family:Consolas;
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
+      font-size:medium;
 }
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
@@ -63,6 +65,7 @@ p {
     text-decoration: none;
     display: block;
     background-color:white;
+     
 }
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
@@ -247,12 +250,16 @@ p {
     float:left;
     padding:6px;
     cursor:pointer;
+    font-family: consolas;
+    font-size:medium;
 }
 #f11r {
     float:left;
     padding:6px;
     margin-left:1px;
     cursor:pointer;
+    font-family: consolas;
+    font-size:medium;
 }
 #boxie {
     background-image:url("../pics/../pics/cartoongearwheel.png");
