--- a/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
+++ b/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
@@ -177,9 +177,9 @@ body {
     min-height:100%;
     max-height:100%;
     height:100%;
-    width:10%;
-    max-width:10%;
-    min-width:10%;
+    width:auto;
+    /*max-width:10%;
+    min-width:10%;*/
     margin:0px;
     padding:0px;
     float:left;
